--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
                 <li><a href="/map/src/">Map</a></li>
             </ul>
         </details>
+
+
+        <details>
+            <summary>Chart.js</summary>
+            <ul>
+                <li><a href="/chartjs/example_fetch.html">Example with fetch</a></li>
+                <li><a href="/chartjs/mixed.html">MIxed</a></li>
+                <li><a href="/chartjs/pie.html">Pie</a></li>
+                <li><a href="/chartjs/polarArea.html">Polar area</a></li>
+                <li><a href="/chartjs/donut.html">Donut</a></li>
+            </ul>
+        </details>
     </main>
     <footer></footer>
 </body>
