--- a/chartjs/polarArea.html
+++ b/chartjs/polarArea.html
@@ -9,6 +9,12 @@
     <script src="polarArea.js"></script>
     
     <link rel="stylesheet" href="reset.css"/>
+
+    <style>
+        canvas {
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
     <canvas></canvas>
