--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <summary>Chart.js</summary>
             <ul>
                 <li><a href="/chartjs/example_fetch.html">Example with fetch</a></li>
-                <li><a href="/chartjs/mixed.html">MIxed</a></li>
+                <li><a href="/chartjs/mixed.html">Mixed</a></li>
                 <li><a href="/chartjs/pie.html">Pie</a></li>
                 <li><a href="/chartjs/polarArea.html">Polar area</a></li>
                 <li><a href="/chartjs/donut.html">Donut</a></li>
