--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="/absolute/src/">Absolute</a></li>
                 <li><a href="/z-index/src/">Z-index</a></li>
                 <li><a href="/form/src/">Form</a></li>
+                <li><a href="/z-index-from/src/">Z-index-form</a></li>
             </ul>
         </details>
 
