--- a/resources/src/index.html
+++ b/resources/src/index.html
@@ -14,7 +14,7 @@
                 <li><a href="https://github.com/Yulai202020/">Github</a></li>
                 <li><a href="https://www.youtube.com/@yulainigmatullin5050">Youtube</a></li>
                 <li><a href="https://www.frontendmentor.io/profile/Yulai202020">Frontend Mentor</a></li>
-                <li><a href="/resources/">Resources</a></li>
+                <li><a href="/resources/src/">Resources</a></li>
             </ul>
         </nav>
     </header>
