--- a/z-index-from/src/index.html
+++ b/z-index-from/src/index.html
@@ -9,80 +9,87 @@
     <link rel="stylesheet" href="main.css"/>
   </head>
   <body>
+    <button onclick="dialogOpen()" class="open-button">Form</button>
+
     <div class="container" id="container"></div>
 
-    <form id="form">
-        <label id="type">Creation</label>
+    <dialog id="form-dialog">
+        <form id="form">
+            <label id="type">Creation</label>
 
-        <label for="position">Position</label>
-        <select id="position">
-            <option value="static">static</option>
-            <option value="absolute">absolute</option>
-            <option value="relative">relative</option>
-            <option value="fixed">fixed</option>
-            <option value="sticky">sticky</option>
-        </select>
+            <label for="position">Position</label>
+            <select id="position">
+                <option value="static">static</option>
+                <option value="absolute">absolute</option>
+                <option value="relative">relative</option>
+                <option value="fixed">fixed</option>
+                <option value="sticky">sticky</option>
+            </select>
 
-        <label for="unit">Unit</label>
-        <select id="unit">
-            <option value="px">px</option>
-            <option value="%">%</option>
+            <label for="unit">Unit</label>
+            <select id="unit">
+                <option value="px">px</option>
+                <option value="%">%</option>
 
-            <option value="em">em</option>
-            <option value="rem">rem</option>
+                <option value="em">em</option>
+                <option value="rem">rem</option>
 
-            <option value="rem">vh</option>
-            <option value="rem">vw</option>
+                <option value="rem">vh</option>
+                <option value="rem">vw</option>
 
-            <option value="cm">cm</option>
-            <option value="in">in</option>
-        </select>
+                <option value="cm">cm</option>
+                <option value="in">in</option>
+            </select>
 
-        <label for="text">Text</label>
-        <div>    
-            <input type="text" id="text" />
-        </div>
+            <label for="text">Text</label>
+            <div>    
+                <input type="text" id="text" />
+            </div>
 
-        <label for="top">Top</label>
-        <div>    
-            <input type="number" id="top" />
-        </div>
+            <label for="top">Top</label>
+            <div>    
+                <input type="number" id="top" />
+            </div>
 
-        <label for="bottom">Bottom</label>
-        <div>
-            <input type="number" id="bottom" />
-        </div>
+            <label for="bottom">Bottom</label>
+            <div>
+                <input type="number" id="bottom" />
+            </div>
 
-        <label for="right">Right</label>
-        <div>
-            <input type="number" id="right" />
-        </div>
+            <label for="right">Right</label>
+            <div>
+                <input type="number" id="right" />
+            </div>
 
-        <label for="left">Left</label>
-        <div>
-            <input type="number" id="left" />
-        </div>
+            <label for="left">Left</label>
+            <div>
+                <input type="number" id="left" />
+            </div>
 
-        <label for="z-index">Z-index</label>
-        <div>
-            <input type="number" id="z-index" />
-        </div>
+            <label for="z-index">Z-index</label>
+            <div>
+                <input type="number" id="z-index" />
+            </div>
 
-        <!-- <div>
-            <label for="color-parent">Color</label>
-            <input type="color" id="color-parent" value="#000000" onchange="onChange(event, 'p')" />
-        </div>
+            <div>
+                <label for="color">Color</label>
+                <input type="color" id="color" value="#000000" />
+            </div>
 
-        <div>
-            <label for="border-color-parent">Border color</label>
-            <input type="color" id="border-color-parent" value="#000000" onchange="onChange(event, 'p')" />
-        </div>
+            <div>
+                <label for="border-color">Border color</label>
+                <input type="color" id="border-color" value="#000000" />
+            </div>
 
-        <div>
-            <label for="background-color-parent">Background color</label>
-            <input type="color" id="background-color-parent" value="#FFFFFF" onchange="onChange(event, 'p')" />
-        </div> -->
-        <button onclick="create(event)">Sumbit</button>
-    </form>
+            <div>
+                <label for="background-color">Background color</label>
+                <input type="color" id="background-color" value="#FFFFFF" />
+            </div>
+
+            <button onclick="create(event)">Sumbit</button>
+        </form>
+
+        <button onclick="dialogClose()" class="close-button">X</button>
+    </dialog>
   </body>
 </html>
