--- a/resources/src/index.html
+++ b/resources/src/index.html
@@ -19,7 +19,12 @@
         </nav>
     </header>
     <main>
-        <p>Hello there!</p>
+        <details>
+            <summary>CSS</summary>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=PEQ3i9q3ez8&list=PL0MUAHwery4o9I7QQVj_RP4ZVpmdx6evz">Lamlkov</a></li>
+            </ul>
+        </details>
     </main>
 </body>
 </html>
