--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <details>
+        <details class="list">
             <summary>Position</summary>
             <ul>
                 <li><a href="/fixed/src/">Fixed</a></li>
@@ -31,7 +31,7 @@
             </ul>
         </details>
 
-        <details>
+        <details class="list">
             <summary>Display</summary>
             <ul>
                 <li><a href="/flexbox/src/">Flexbox</a></li>
@@ -40,21 +40,21 @@
             </ul>
         </details>
 
-        <details>
+        <details class="list">
             <summary>Side-bar</summary>
             <ul>
                 <li><a href="/minimize/src/">Minimize</a></li>
             </ul>
         </details>
 
-        <details>
+        <details class="list">
             <summary>Map</summary>
             <ul>
                 <li><a href="/map/src/">Map</a></li>
             </ul>
         </details>
 
-        <details>
+        <details class="list">
             <summary>Chart.js</summary>
             <ul>
                 <li><a href="/chartjs/example_fetch.html">Example with fetch</a></li>
