--- a/z-index-from/src/index.html
+++ b/z-index-from/src/index.html
@@ -66,22 +66,22 @@
                 <input type="number" id="z-index" />
             </div>
 
+            <label for="color">Color</label>
             <div>
-                <label for="color">Color</label>
                 <input type="color" id="color" value="#000000" />
             </div>
 
+            <label for="border-color">Border color</label>
             <div>
-                <label for="border-color">Border color</label>
                 <input type="color" id="border-color" value="#000000" />
             </div>
-
+            
+            <label for="background-color">Background color</label>
             <div>
-                <label for="background-color">Background color</label>
                 <input type="color" id="background-color" value="#FFFFFF" />
             </div>
 
-            <button onclick="create(event)">Sumbit</button>
+            <button onclick="create(event)">Create</button>
         </form>
 
         <button onclick="dialogClose()" class="close-button">X</button>
