--- a/z-index-from/src/index.html
+++ b/z-index-from/src/index.html
@@ -66,6 +66,17 @@
                 <input type="number" id="z-index" />
             </div>
 
+            <label for="width">Width</label>
+            <div>
+                <input type="number" id="width" />
+            </div>
+
+            <label for="height">Height</label>
+            <div>
+                <input type="number" id="height" />
+            </div>
+
+
             <label for="color">Color</label>
             <div>
                 <input type="color" id="color" value="#000000" />
