--- a/z-index-from/src/index.html
+++ b/z-index-from/src/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="main.css" />
     </head>
     <body>
-        <button onclick="dialogOpen()" class="open-button">Form</button>
+        <button onclick="dialogOpen()" class="open-button">Create</button>
 
         <div class="container" id="container"></div>
 
@@ -74,12 +74,12 @@
 
                 <div class="part">
                     <label for="width">Width</label>
-                    <input type="number" id="width" />
+                    <input type="number" id="width" value="100" />
                 </div>
 
                 <div class="part">
                     <label for="height">Height</label>
-                    <input type="number" id="height" />
+                    <input type="number" id="height" value="100" />
                 </div>
 
                 <div class="part">
