--- a/z-index-from/src/index.html
+++ b/z-index-from/src/index.html
@@ -9,13 +9,15 @@
         <link rel="stylesheet" href="main.css" />
     </head>
     <body>
-        <button onclick="dialogOpen()" class="open-button">Create</button>
+        <div class="content">
+            <button onclick="dialogOpen()" class="open-button">Create</button>
 
-        <div class="container" id="container"></div>
+            <div id="container" class="container"></div>
+        </div>
 
-        <dialog id="form-dialog">
-            <form id="form">
-                <div class="part1">
+        <div class="form-container">
+            <form id="form" class="form">
+                <div class="title-container">
                     <label id="type">Create</label>
                 </div>
 
@@ -102,7 +104,7 @@
                 </button>
             </form>
 
-            <button onclick="dialogClose()" class="close-button">X</button>
-        </dialog>
+            <!-- <button onclick="dialogClose()" class="close-button">X</button> -->
+        </div>
     </body>
 </html>
