--- a/z-index-from/src/index.html
+++ b/z-index-from/src/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="content">
-            <button onclick="dialogOpen()" class="open-button">Create</button>
+            <!-- <button onclick="dialogOpen()" class="open-button">Create</button> -->
 
             <div id="container" class="container"></div>
         </div>
